# zeparts-ebay-automation

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  zeparts_dev.db
.github/workflows/: ci.yml
infra/terraform/: iam.tf  secrets.tf
scripts/: backfill_catalog.py  create_sandbox_listing.py  dry_run_listing.py  run_admin.py  test_image_upload.py
src/admin/: main.py
src/admin/routers/: listings.py
src/admin/templates/: base.html  listing_detail.html  listings.html
src/catalog/: __init__.py  client.py  ingestion.py  models.py
src/core/: config.py  logging.py  retry.py  secrets.py
src/db/: models.py  repository.py
src/db/migrations/: env.py
src/db/migrations/versions/: 5c43d263ae48_initial_schema.py
src/ebay/: __init__.py  auth.py  category_mapper.py  image_uploader.py  inventory_api.py  listing_builder.py  trading_api.py
src/scheduler/: triggers.py
src/workers/: image_worker.py  listing_worker.py  sync_worker.py
tests/fixtures/: sample_parts.json
tests/integration/: test_ebay_sandbox.py
tests/unit/: test_catalog_models.py  test_category_mapper.py  test_core.py  test_ebay_auth.py  test_image_worker.py  test_listing_builder.py  test_repository.py  test_sync_worker.py  test_title_generation.py
